fix(@clayui/css): LPD-34095 Reduce the default c-slideout z-index so dropdown-menu's aren't hidden
BREAKING CHANGE: c-slideout is no longer above fixed navigation menus. If you need the old z-index please add the class c-slideout-height-full to c-slideout

--- a/packages/clay-css/src/scss/cadmin/components/_slideout.scss
+++ b/packages/clay-css/src/scss/cadmin/components/_slideout.scss
@@ -37,3 +37,7 @@
 		@include clay-slideout-variant($cadmin-c-slideout-end-sm-down);
 	}
 }
+
+.c-slideout-height-full {
+	@include clay-slideout-variant($cadmin-c-slideout-height-full);
+}
