--- a/packages/clay-css/src/scss/cadmin/variables/_globals-z-index.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_globals-z-index.scss
@@ -21,4 +21,9 @@ $cadmin-zindex-pagination-link-focus: 4 !default;
 $cadmin-zindex-pagination-link-active: 3 !default;
 $cadmin-zindex-pagination-link-disabled: 0 !default;
 $cadmin-zindex-panel-header-link-focus: 1 !default;
-$cadmin-zindex-sidenav: $cadmin-zindex-fixed + 5 !default; // 1035
+$cadmin-zindex-sidenav: calc(#{$cadmin-zindex-dropdown} - 25) !default; // 975
+
+$cadmin-zindex-c-slideout: $cadmin-zindex-sidenav !default; // 975
+$cadmin-zindex-c-slideout-height-full: calc(
+	#{$cadmin-zindex-fixed} + 5
+) !default; // 1035
