--- a/packages/clay-css/src/scss/components/_slideout.scss
+++ b/packages/clay-css/src/scss/components/_slideout.scss
@@ -37,3 +37,7 @@
 		@include clay-slideout-variant($c-slideout-end-sm-down);
 	}
 }
+
+.c-slideout-height-full {
+	@include clay-slideout-variant($c-slideout-height-full);
+}
